# templates

./: .gitignore  README.org  flake.nix
haskell/: flake.nix
python-application/: flake.nix  main.py  pyproject.toml
python-poetry/: .envrc  flake.nix
rust/: flake.nix
rust-oxalica/: flake.nix
torch/: flake.nix
torch/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
torch/.direnv/flake-inputs/: pr145r75gs79chcx4zwhdw831idz3mkn-source
trivial/: flake.nix
zig/: flake.nix
